# investafarm-canisters

./: .gitignore  Cargo.toml  README.md  canister_ids.json  canister_one_did.sh  canister_three_did.sh  canister_two_did.sh  dfx.json  did.sh
src/canister_one/: Cargo.toml  canister_one.did
src/canister_one/src/: adminapproval.rs  approved_principals.rs  askforloan.rs  askforloan2.rs  ck_eth_payments.rs  ckusdc_payments.rs  common.rs  creditscore.rs  data_migration.rs  entitymanagement.rs  exchange_rate.rs  farmerFiles.rs  farmerfiles.rs  farmsagribizmanagement.rs  icpledger.rs  icrc_standards.rs  ifarm_tokens.rs  investor_saved_farms.rs  lib.rs  payments.rs  supplymanagement.rs  transaction_fees.rs
src/canister_one/src/ck_eth/: mod.rs
src/canister_three/: Cargo.toml  canister_three.did
src/canister_three/src/: lib.rs
src/canister_two/: Cargo.toml  canister_two.did
src/canister_two/src/: lib.rs
src/investafarm_canisters_backend/: Cargo.toml  investafarm_canisters_backend.did
src/investafarm_canisters_backend/src/: entitymanagement.rs  lib.rs
