[package]
name = "canister_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5.6" 
ic-cdk-macros = "0.8.4"
ic-ledger-types = "0.9.0"
serde_derive = "1.0"
b3_utils = "0.8.0"

